# benchmarking-rf-CIKM

./: .env.example  .gitignore  JOURNAL.md  README.md  beir_data_path.json  benchmark.py  cost_per_call.json  discovery_experiment.txt  feedback_prompts.json  formula_params.json  grid_search.sh  grid_search_logprobs_ordinal_fiqa.txt  grid_search_openai_emb_fiqa.txt  grid_search_openai_emb_scidocs.txt  indexing_to_qdrant.py  load_beir.py  logprobs_feedback.py  logprobs_ordinal_feedback.py  logprobs_reasoning_feedback.py  openai_feedback.py  pyproject.toml  rerank_search.sh  rerank_search_limit25.txt  test_feedback_models.py  train_rf.py
