[project]
name = "benchmarking-rf"
version = "0.1.0"
description = "Benchmark of Qdrant Relevance Feedback vs reranking on BEIR datasets"
requires-python = ">=3.11"
dependencies = [
    "beir",
    "python-dotenv",
    "qdrant-client",
    "qdrant-relevance-feedback",
    "fastembed",
    "ranx",
    "tqdm",
    "openai>=2.32.0",
]

[tool.uv]
dev-dependencies = []
